# Sweet-premium-strore

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  Procfile  README.md  admin_append.js  app.py  deploy.sh  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  routes.py  secrets_utils.py  seed_pages.py  seed_smm.py  start-vps.sh  start.ps1  start.sh  tasks.json
.workshop/: context.md  settings.json
api/: admin.py  admin_routes.py  admin_shared.py  affiliates.py  ai_generate.py  announcements.py  api_keys.py  api_providers.py  auth.py  auth_account.py  auth_admin.py  auth_oauth.py  auth_shared.py  balance.py  balance_service.py  balance_shared.py  banners.py  blog.py  bot_config.py  bot_links.py  bot_links_routes.py  bot_links_service.py  bot_links_shared.py  card_charge.py  categories.py  feature_guard.py  flash_sales.py  gift_codes.py  oauth.py  order_notifications.py  orders.py  orders_service.py  orders_shared.py  payment.py  products.py  products_shared.py  rate_limit.py  reviews.py  sanitize.py  search.py  (+5 more)
api/providers/: __init__.py  account_premium.py  giftcard.py  smm_panel.py  topup_game.py
bot/: config.py  discord_bot.py  mail.py  run_bots.py  telegram_bot.py
db/: __init__.py  init_db.py  migrate_2fa.py  migrate_bot_links.py  migrate_categories.py  migrate_stock_mgmt.py  migrate_support.py  models.py  providers.py  repositories.py  schema_version.py  seed.py  seed_more.py
plans/: refactoring_tasks.json
plans/2026-05-03_digital_product_shop/: plan.md
static/: admin-bot.js  admin-mobile.js  admin.js  admin_tmp.js  ai-assist.js  api-docs.js  app.js  auth-pages.js  blog-public.css  blog-public.js  blog.html  blog.js  core.js  editor.js  index.html  index_old.html  index_old_v2.html  oauth-login.js  oauth-settings.js  profile.js  smm.js  storefront.js  styles.css  styles_old.css  support.js
tasks/: security_fixes.json
tests/: provider_harness.py  test_bot_runner_lock.py  test_postgres_integration.py  test_provider_harness.py  test_social_seo_meta.py
(+11 files in other folders)
