[project]
name = "data-app"
version = "0.1.0"
description = "Data App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "python-multipart==0.0.22",
    "watchfiles==1.1.1",
]

[tool.uv]
exclude-newer = "14 days"
# workshop-connect is published by us; exempt from the rolling window.
exclude-newer-package = { workshop-connect = "2027-01-01" }
