[project]
name = "data-app"
version = "0.1.0"
description = "Data App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "python-multipart==0.0.22",
    "watchfiles==1.1.1",
    "sqlalchemy>=2.0.49",
    "payos==1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=25.1.0",
    "psycopg2-binary>=2.9.11",
    "pymysql>=1.1.1",
    "email-validator>=2.3.0",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.0",
    "bleach>=6.3.0",
    "discord-py>=2.7.1",
    "python-telegram-bot>=22.7",
    "pytest>=8.3.5",
]

[tool.uv]
exclude-newer = "14 days"
